--- a/conf/os_conf_rocky.yaml
+++ b/conf/os_conf_rocky.yaml
@@ -13,3 +13,8 @@ os:
 #######################
 install:
   httpd: dnf install -y httpd
+  vim-enhanced: dnf install -y vim-enhanced
+  epel-release: dnf install -y epel-release
+
+update:
+  update: dnf -y update
