--- a/kong01/Vagrantfile
+++ b/kong01/Vagrantfile
@@ -11,15 +11,14 @@ Vagrant.configure("2") do |config|
 ######################
 # General Setting
 ######################
-
   config.vm.box = "rockylinux/9"
-  config.vm.hostname = "sv11"
+  config.vm.hostname = "kong01"
   config.vm.box_check_update = false
-  config.vm.network "private_network", ip: "192.168.56.11" #Host only NW
+  config.vm.network "private_network", ip: "192.168.56.33"
 ###
   config.vm.provider "virtualbox" do |vb|
     vb.cpus = 1
-    vb.memory = 512
+    vb.memory = 1024
   end
   config.vm.synced_folder "../pub/", "/pub"
   config.vm.synced_folder "../work/", "/home/vagrant/work"
@@ -28,7 +27,11 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", inline: os_conf['os']['timezone']
   config.vm.provision "shell", inline: os_conf['os']['locale']
 # vimの設定
-  config.vm.provision "shell", inline: vim_conf['install']['vim']
+  config.vm.provision "shell", inline: vim_conf['install']['vim-enhanced']
   config.vm.provision "shell", inline: vim_conf['setting']['vimrc']
 #######################
 end
+
+
+
+
