--- a/minikube/Vagrantfile
+++ b/minikube/Vagrantfile
@@ -6,7 +6,7 @@ Vagrant.configure("2") do |config|
   config.vm.box_check_update = false
   config.vm.hostname = "minikube"
   config.vm.network "private_network", ip: "192.168.56.52"
-# x11
+## x11
   #config.ssh.forward_x11 = true
   #
 #  config.vm.synced_folder "./share", "/vagrant_data"
@@ -18,9 +18,10 @@ Vagrant.configure("2") do |config|
     vb.memory = "4096"
     #vb.memory = "3072"
   end
-# script
+## script
+## 最小限の設定にする
   config.vm.provision "shell", inline: $configBox
-  config.vm.provision "shell", inline: $configMinikube
+#  config.vm.provision "shell", inline: $configMinikube
 end
 
 ########################################################
