--- a/01.base-ubuntu/Vagrantfile
+++ b/01.base-ubuntu/Vagrantfile
@@ -11,22 +11,23 @@ Vagrant.configure("2") do |config|
 ######################
 # General Setting
 ######################
-  config.vm.box = "bento/ubuntu-20.04"
-  config.vm.hostname = "kubeadm"
+  config.vm.box = "bento/ubuntu-22.04"
+  config.vm.hostname = "host-name" ### 修正必要
   config.vm.box_check_update = false
-  config.vm.network "private_network", ip: "192.168.56.53" # IPは直に書くか・・
+  config.vm.network "private_network", ip: "192.168.56.xx" ### 修正必要
 ###
   config.vm.provider "virtualbox" do |vb|
-    vb.cpus = 2
-    vb.memory = 2048
+    vb.cpus = 2		## 適宜見直し
+    vb.memory = 2048	## 適宜見直し
   end
   config.vm.synced_folder "../pub/", "/pub"
-  config.vm.synced_folder "../work/", "/home/vagrant/work"
 #######################
 # OS設定
   config.vm.provision "shell", inline: os_conf['apt-get']['update']
   config.vm.provision "shell", inline: os_conf['os']['timezone']
   config.vm.provision "shell", inline: os_conf['os']['locale']
+  config.vm.provision "shell", inline: os_conf['bashrc']['modify_ll']
+
 # vimの設定
   config.vm.provision "shell", inline: vim_conf['setting']['vimrc']
 #######################
