--- a/01.base-ubuntu/Vagrantfile
+++ b/01.base-ubuntu/Vagrantfile
@@ -12,13 +12,15 @@ Vagrant.configure("2") do |config|
 # General Setting
 ######################
   config.vm.box = "bento/ubuntu-22.04"
-  config.vm.hostname = "host-name" ### 修正必要
+# hostnameは修正必要
+  config.vm.hostname = "host-name" 
   config.vm.box_check_update = false
-  config.vm.network "private_network", ip: "192.168.56.xx" ### 修正必要
+# ipは修正必要
+  config.vm.network "private_network", ip: "192.168.56.xx" 
 ###
   config.vm.provider "virtualbox" do |vb|
-    vb.cpus = 2		## 適宜見直し
-    vb.memory = 2048	## 適宜見直し
+    vb.cpus = 2
+    vb.memory = 2048
   end
   config.vm.synced_folder "../pub/", "/pub"
 #######################
