--- a/10.master/Vagrantfile
+++ b/10.master/Vagrantfile
@@ -14,21 +14,20 @@ Vagrant.configure("2") do |config|
   config.vm.box = "bento/ubuntu-22.04"
   config.vm.hostname = "master"
   config.vm.box_check_update = false
-  config.vm.network "private_network", ip: "192.168.56.53" # IPは直に書くか・・
+  config.vm.network "private_network", ip: "192.168.56.53" 
 ###
   config.vm.provider "virtualbox" do |vb|
     vb.cpus = 2
     vb.memory = 2048
   end
   config.vm.synced_folder "../pub/", "/pub"
-  config.vm.synced_folder "../work/", "/home/vagrant/work"
 #######################
 # OS設定
-  ## インストール手順が違う
-
   config.vm.provision "shell", inline: os_conf['apt-get']['update']
   config.vm.provision "shell", inline: os_conf['os']['timezone']
   config.vm.provision "shell", inline: os_conf['os']['locale']
+  config.vm.provision "shell", inline: os_conf['bashrc']['modify_ll']
+
 # vimの設定
   config.vm.provision "shell", inline: vim_conf['setting']['vimrc']
 #######################
