--- a/11.worker1/Vagrantfile
+++ b/11.worker1/Vagrantfile
@@ -21,14 +21,12 @@ Vagrant.configure("2") do |config|
     vb.memory = 2048
   end
   config.vm.synced_folder "../pub/", "/pub"
-  config.vm.synced_folder "../work/", "/home/vagrant/work"
 #######################
 # OS設定
-  ## インストール手順が違う
-
   config.vm.provision "shell", inline: os_conf['apt-get']['update']
   config.vm.provision "shell", inline: os_conf['os']['timezone']
   config.vm.provision "shell", inline: os_conf['os']['locale']
+  config.vm.provision "shell", inline: os_conf['bashrc']['modify_ll']
 # vimの設定
   config.vm.provision "shell", inline: vim_conf['setting']['vimrc']
 #######################
