--- a/01.base-redhat8/Vagrantfile
+++ b/01.base-redhat8/Vagrantfile
@@ -4,34 +4,33 @@
 # 外部ファイル読み込み
 require 'yaml'
 
-vim_conf = YAML.load_file '../conf/vim_conf_ubuntu.yaml'
-os_conf = YAML.load_file '../conf/os_conf_ubuntu.yaml'
+vim_conf = YAML.load_file '../conf/set_vimrc.yaml'
+os_conf = YAML.load_file '../conf/os_conf_rhel.yaml'
 
 Vagrant.configure("2") do |config|
 ######################
 # General Setting
 ######################
-  config.vm.box = "bento/ubuntu-22.04"
-# hostnameは修正必要
-  config.vm.hostname = "host-name" 
+  config.vm.box = "generic/rhel8"
+#  config.vm.box_version = "8.2"
+  config.vm.hostname = "rhel01"
   config.vm.box_check_update = false
-# ipは修正必要
-  config.vm.network "private_network", ip: "192.168.56.xx" 
+  config.vm.network "private_network", ip: "192.168.56.30"
 ###
   config.vm.provider "virtualbox" do |vb|
-    vb.cpus = 2
-    vb.memory = 2048
+    vb.cpus = 1
+    vb.memory = 512
   end
   config.vm.synced_folder "../pub/", "/pub"
 #######################
 # OS設定
-  config.vm.provision "shell", inline: os_conf['apt-get']['update']
   config.vm.provision "shell", inline: os_conf['os']['timezone']
-  config.vm.provision "shell", inline: os_conf['os']['locale']
-  config.vm.provision "shell", inline: os_conf['bashrc']['modify_ll']
-
 # vimの設定
   config.vm.provision "shell", inline: vim_conf['setting']['vimrc']
+  config.vm.provision "shell", inline: vim_conf['os_type']['rhel']
 #######################
 end
+
+
+
 
