--- a/02.base-rocky/Vagrantfile
+++ b/02.base-rocky/Vagrantfile
@@ -4,7 +4,7 @@
 # 外部ファイル読み込み
 require 'yaml'
 
-vim_conf = YAML.load_file '../conf/vim_conf_rocky.yaml'
+vim_conf = YAML.load_file '../conf/set_vimrc.yaml'
 os_conf = YAML.load_file '../conf/os_conf_rocky.yaml'
 
 Vagrant.configure("2") do |config|
@@ -12,16 +12,15 @@ Vagrant.configure("2") do |config|
 # General Setting
 ######################
   config.vm.box = "rockylinux/9"
-  config.vm.hostname = "cl01"
+  config.vm.hostname = "rocky01"
   config.vm.box_check_update = false
-  config.vm.network "private_network", ip: "192.168.56.xx"
+  config.vm.network "private_network", ip: "192.168.56.40"
 ###
   config.vm.provider "virtualbox" do |vb|
     vb.cpus = 1
     vb.memory = 512
   end
   config.vm.synced_folder "../pub/", "/pub"
-  config.vm.synced_folder "../work/", "/home/vagrant/work"
 #######################
 # OS設定
   config.vm.provision "shell", inline: os_conf['os']['timezone']
@@ -29,9 +28,11 @@ Vagrant.configure("2") do |config|
 # 時間がかかるのでスキップ
 #  config.vm.provision "shell", inline: os_conf['update']['update']
   config.vm.provision "shell", inline: os_conf['install']['epel-release']
+   # インストールに時間がかかる
+  config.vm.provision "shell", inline: os_conf['install']['vim-enhanced']
 # vimの設定
-  config.vm.provision "shell", inline: vim_conf['install']['vim-enhanced']
   config.vm.provision "shell", inline: vim_conf['setting']['vimrc']
+  config.vm.provision "shell", inline: vim_conf['os_type']['rocky']
 #######################
 end
 
