--- a/11.worker1/Vagrantfile
+++ b/11.worker1/Vagrantfile
@@ -4,7 +4,7 @@
 # 外部ファイル読み込み
 require 'yaml'
 
-vim_conf = YAML.load_file '../conf/vim_conf_ubuntu.yaml'
+vim_conf = YAML.load_file '../conf/set_vimrc.yaml'
 os_conf = YAML.load_file '../conf/os_conf_ubuntu.yaml'
 
 Vagrant.configure("2") do |config|
@@ -14,7 +14,7 @@ Vagrant.configure("2") do |config|
   config.vm.box = "bento/ubuntu-22.04"
   config.vm.hostname = "worker1"
   config.vm.box_check_update = false
-  config.vm.network "private_network", ip: "192.168.56.54" # IPは直に書くか・・
+  config.vm.network "private_network", ip: "192.168.56.54"
 ###
   config.vm.provider "virtualbox" do |vb|
     vb.cpus = 2
@@ -27,8 +27,10 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", inline: os_conf['os']['timezone']
   config.vm.provision "shell", inline: os_conf['os']['locale']
   config.vm.provision "shell", inline: os_conf['bashrc']['modify_ll']
+
 # vimの設定
   config.vm.provision "shell", inline: vim_conf['setting']['vimrc']
+  config.vm.provision "shell", inline: vim_conf['os_type']['ubuntu']
 #######################
 end
 
