--- a/12.worker2/Vagrantfile
+++ b/12.worker2/Vagrantfile
@@ -4,33 +4,33 @@
 # 外部ファイル読み込み
 require 'yaml'
 
-vim_conf = YAML.load_file '../conf/vim_conf_ubuntu.yaml'
+vim_conf = YAML.load_file '../conf/set_vimrc.yaml'
 os_conf = YAML.load_file '../conf/os_conf_ubuntu.yaml'
 
 Vagrant.configure("2") do |config|
 ######################
 # General Setting
 ######################
-  config.vm.box = "bento/ubuntu-20.04"
+  config.vm.box = "bento/ubuntu-22.04"
   config.vm.hostname = "worker2"
   config.vm.box_check_update = false
-  config.vm.network "private_network", ip: "192.168.56.55" # IPは直に書くか・・
+  config.vm.network "private_network", ip: "192.168.56.55"
 ###
   config.vm.provider "virtualbox" do |vb|
     vb.cpus = 2
     vb.memory = 2048
   end
   config.vm.synced_folder "../pub/", "/pub"
-  config.vm.synced_folder "../work/", "/home/vagrant/work"
 #######################
 # OS設定
-  ## インストール手順が違う
-
   config.vm.provision "shell", inline: os_conf['apt-get']['update']
   config.vm.provision "shell", inline: os_conf['os']['timezone']
   config.vm.provision "shell", inline: os_conf['os']['locale']
+  config.vm.provision "shell", inline: os_conf['bashrc']['modify_ll']
+
 # vimの設定
   config.vm.provision "shell", inline: vim_conf['setting']['vimrc']
+  config.vm.provision "shell", inline: vim_conf['os_type']['ubuntu']
 #######################
 end
 
