--- a/minikube/Vagrantfile
+++ b/minikube/Vagrantfile
@@ -12,13 +12,13 @@ Vagrant.configure("2") do |config|
 # General Setting
 ######################
   config.vm.box = "bento/ubuntu-22.04"
-  config.vm.hostname = "minikube" ### 修正必要
+  config.vm.hostname = "minikube"
   config.vm.box_check_update = false
-  config.vm.network "private_network", ip: "192.168.56.52" ### 修正必要
+  config.vm.network "private_network", ip: "192.168.56.52"
 ###
   config.vm.provider "virtualbox" do |vb|
-    vb.cpus = 2		## 適宜見直し
-    vb.memory = 4096	## 適宜見直し
+    vb.cpus = 2
+    vb.memory = 4096
   end
   config.vm.synced_folder "../pub/", "/pub"
 #######################
