--- a/minikube/Vagrantfile
+++ b/minikube/Vagrantfile
@@ -4,7 +4,7 @@
 # 外部ファイル読み込み
 require 'yaml'
 
-vim_conf = YAML.load_file '../conf/vim_conf_ubuntu.yaml'
+vim_conf = YAML.load_file '../conf/set_vimrc.yaml'
 os_conf = YAML.load_file '../conf/os_conf_ubuntu.yaml'
 
 Vagrant.configure("2") do |config|
@@ -27,9 +27,9 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", inline: os_conf['os']['timezone']
   config.vm.provision "shell", inline: os_conf['os']['locale']
   config.vm.provision "shell", inline: os_conf['bashrc']['modify_ll']
-
 # vimの設定
   config.vm.provision "shell", inline: vim_conf['setting']['vimrc']
+  config.vm.provision "shell", inline: vim_conf['os_type']['ubuntu']
 #######################
 end
 
